top-level class then any additional_content_blocks with use_category
set to 1 would get the last page's category content. [Sam]

=item *

Added a new method to Krang::ElementClass::TopLevel, file_mode().
This method may be overridden to control the mode of published
files. [Sam]

=item *

Fixed a bug where a category linking to a sub-category via an element
would break krang_import. [Sam]

=back



=head2 v1.1025 - May 20, 2005

=over

=item *

Added ability for categories to be created or removed via the FTP
interface.  Added new group permission, "Manage categories via FTP"
which defaults to OFF.  Turn this on to permit your users to use
this new feature.  Fixed ASCII-mode bug in FTP interface. [Daniel Packer]


=item *

Added new platform files for RedHat Enterprise Server 
ES3 and ES4. [Jesse Erlbaum]

=back

=head2 v1.102 - April 18th 2004

=over

=item *

Added a new Krang::ElementClass method, mark_form_invalid().  This
method may be overriden to alter how Krang marks element form fields
invalid.  The default behvior, wrapping the field in a span set to the
"invalid" class remains. [Sam]

=item *

Upgraded to the latest release of HTML::PopupTreeSelect, v1.5. [Sam]

=item *

Improved support for Mac OSX, both in compilation and
documentation. [Aaron Ross]

=item *

Fixed amusing bug in Krang::Test::Content that was causing the same random
word sequences to be generated multiple times when called in a tight loop.
[Perrin]

=item *

Fixes to the import process as it affects L<Krang::ListItem>
objects - list orders are now preserved properly.  [Peter]

=item *

Can now bundle L<Krang::List> data with your element library, and have
it imported when the database is created (in the same fashion as
C<templates.kds>).  The file is C<lists.kds>.  [Peter]

=item *

Added C<slug> as a variable available to all templates at
publish-time.  This was intended to be there all along, but somehow
fell through the cracks.  [Peter]

=item *
